# WaveGuide

./: .gitignore  CMakeLists.txt  Camera.cpp  Detect_hands.cpp  Detect_hands.h  Finger_counter.h  LICENSE  Mouse.cpp  Mouse.h  README.md  build.sh  detection.cpp  install_dependencies.sh  main.cpp  web.txt
Website/: about.html  about_item.css  document.css  documentation.html  hardware.html  index.html  journey.html  limit.css  limitations_and_future_work.html  overview.css  overview.html  performance.css  performance.html  require.css  requirements.html  software.html  style.css  welcome.css
src/: Camera.cpp  Camera.h  Detect_hands.cpp  Finger_counter.cpp  Finger_counter.h  Mouse.cpp  Mouse.h  main.cpp
tests/: CMakeLists.txt  Camera_test.cpp  Finger_counter_test.cpp  Finger_test.cpp  Mouse_test.cpp
