cmake_minimum_required(VERSION 2.8)
project( waveGuide )
find_package( OpenCV REQUIRED )
find_package( X11 REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(${X11_INCLUDE_DIR} ${X11_XTest_INCLUDE_PATH})
add_executable( main main.cpp Mouse.cpp Mouse.h Detect_hands.cpp Detect_hands.h Camera.cpp Camera.h Finger_counter.h Finger_counter.cpp)
target_link_libraries( main ${OpenCV_LIBS} )
target_link_libraries(main ${X11_LIBRARIES} ${X11_XTest_LIB})