cmake_minimum_required(VERSION 2.8)
project( WaveGuide )
find_package( OpenCV REQUIRED )
find_package( X11 REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(${X11_INCLUDE_DIR} ${X11_XTest_INCLUDE_PATH})
add_executable(Finger_test ../src/Finger_counter.cpp ../src/Finger_counter.h Finger_test.cpp)
target_link_libraries( Finger_test ${OpenCV_LIBS} gtest gtest_main -pthread)
target_link_libraries( Finger_test ${X11_LIBRARIES} ${X11_XTest_LIB})
